--- a/LaTeX/schastel.tex
+++ b/LaTeX/schastel.tex
@@ -2,7 +2,7 @@
 
 \usepackage[hidelinks]{hyperref}
 \hypersetup{
-  pdftitle={Serge CHASTEL - Resume - 2022-Nov},
+  pdftitle={Serge CHASTEL - Resume - 2022-Dec},
 }
 
 % Layout
@@ -204,8 +204,8 @@
 \begin{minipage}[t]{0.67\linewidth}
   \mynewsection{\faBriefcase}{Experience}
   
-  \experience{Senior Software Engineer}{Oracle Corp.}{Since June 2022 (5
-    months)}{(Remote, Honolulu, Hawai`i, USA)}
+  \experience{Senior Software Engineer}{Oracle Corp.}{June -
+    October 2022 (5 months)}{(Remote, Honolulu, Hawai`i, USA)}
 
   \medskip
   
